# deeploid-mini-cli

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  QIIME2_pipeline.md  README.md  SRA ID.tsv  SRA ID.txt  Silva\rpd_upload  deblurFINAL_pipeline.py  deblur_pipeline.py  deeploid_cli.py  enviroment.yml  pyproject.toml  qiime2_pipeline.py  qiime2_pipeline_INPUT_TO_OTU.py  qiime2_train_classifier.py  vsearch_pipe.py  пример образца для сравнения.docx
.dvc/: config
.github/workflows/: autotest_dada2.yml
cli_tutorial/: vsearch_tutorial.md
data/: README.md
data/qiime2/: MANIFEST
data/standart_dataset/: .gitignore  mock_2_R1.fastq.dvc  mock_2_R2.fastq.dvc
databases/: README.md
databases/GG/: .gitignore  85_otus_classifier.qza  85_otus_classifier.qza.dvc
databases/dada/: .gitignore  silva_nr99_v138.1_train_set.fa.gz.dvc
databases/vsearch/: .gitignore  SRR22104214.sra.dvc
deblur/: README.md
deblur/seqs/: MANIFEST.tsv
deblur/sra/: CHANGES
docs/: SM_envs_tests.md  SM_scripts_tests.md  vsearch_tutorial.md  workflow_structure.md
docs/history/: README.md
env_dada2/: environment.yml
history/SRA_dataset/: README.md
history/usearch/: README.md
output/: ASV.csv  TAXA.rds  otu_fw.rds  taxonomy.tsv
output1/: joined-sequences.qza
pipeline/: README.md  dada2.R  dada2_OTU_by_files.R  dada2_OTU_full.R  dada2_taxa.R  dada2_taxa_by_files.R  dada2_taxa_full.R  dada2_taxa_visualisation.R  upl_libraries.R  vsearch_pipeline.py
qiime2/: vsearch_tutorial.md
rules/: dada.smk  qiime.smk
usearch/: README.md
workflow/: README.md  snakefile
(+51 files in other folders)
