[tool.poetry]
name = "deeploid-mini-cli"
version = "0.1.0"
description = ""
authors = ["NikitaVenediktov <n.venediktov@gmail.com>"]
readme = "README.md"
packages = [{include = "deeploid_mini_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.58.1"
dvc-gdrive = "^2.19.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
